--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/index/index",
     "pages/goodsDetails/goodsDetails",
     "pages/shopcart/shopcart",
-    "pages/myself/myself"
+    "pages/myself/myself",
+    "pages/createOrder/createOrder"
   ],
   "window": {
     "backgroundTextStyle": "dark",
